--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "nwb test",
     "test:watch": "nwb test --server",
     "storybook": "start-storybook -p 3007 -c .storybook",
+    "dev:test": "./node_modules/.bin/test-bed -p 3011 -c .testbed/webpack.config.test-bed.js",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.34.0",
     "autoprefixer": "^6.5.3",
+    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.0",
     "eslint-config-standard": "^6.2.1",
@@ -28,12 +30,14 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-standard": "^2.0.1",
+    "mocha": "^3.2.0",
     "nib": "^1.1.2",
     "nwb": "0.11.x",
     "nwb-stylus": "^0.6.0",
     "power-assert": "^1.4.2",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0"
+    "stylus-loader": "^2.4.0",
+    "test-bed": "github:taskworld/test-bed"
   },
   "author": "Kawin Glomjai <g.kawin@live.com>",
   "license": "MIT",
